{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 24,
  "lineage": "23a35444-39cb-4c35-6161-f5f6db9944cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:858415213592:instance/i-0b69b89332d61e1a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0b69b89332d61e1a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0091878fd83056ea1",
            "private_dns": "ip-10-0-0-159.ec2.internal",
            "private_ip": "10.0.0.159",
            "public_dns": "ec2-174-129-178-155.compute-1.amazonaws.com",
            "public_ip": "174.129.178.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ee3a6c709cacdb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d64d8b2425e735d0",
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bf053ea31cf47fe"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:858415213592:instance/i-0fde80b69b091b451",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fde80b69b091b451",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-006a96a30702af35b",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-100-26-145-162.compute-1.amazonaws.com",
            "public_ip": "100.26.145.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060b406aceea721a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052929b889f05ab32",
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bf053ea31cf47fe"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858415213592:internet-gateway/igw-0c5e47961280dacef",
            "id": "igw-0c5e47961280dacef",
            "owner_id": "858415213592",
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "vpc_id": "vpc-07e1342493974d14e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-26723",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858415213592:loadbalancer/app/globo-web-alb/f887fb16c0378b3b",
            "arn_suffix": "app/globo-web-alb/f887fb16c0378b3b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1301578301.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:858415213592:loadbalancer/app/globo-web-alb/f887fb16c0378b3b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "security_groups": [
              "sg-0e32d00efbdb2ea32"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052929b889f05ab32"
              },
              {
                "subnet_id": "subnet-0d64d8b2425e735d0"
              }
            ],
            "subnets": [
              "subnet-052929b889f05ab32",
              "subnet-0d64d8b2425e735d0"
            ],
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "vpc_id": "vpc-07e1342493974d14e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858415213592:listener/app/globo-web-alb/f887fb16c0378b3b/95c93d8fbbee9eaf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:858415213592:targetgroup/nginx-alb-tg/1ecfb31475815a1a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:858415213592:listener/app/globo-web-alb/f887fb16c0378b3b/95c93d8fbbee9eaf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:858415213592:loadbalancer/app/globo-web-alb/f887fb16c0378b3b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858415213592:targetgroup/nginx-alb-tg/1ecfb31475815a1a",
            "arn_suffix": "targetgroup/nginx-alb-tg/1ecfb31475815a1a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:858415213592:targetgroup/nginx-alb-tg/1ecfb31475815a1a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "target_type": "instance",
            "vpc_id": "vpc-07e1342493974d14e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:858415213592:targetgroup/nginx-alb-tg/1ecfb31475815a1a-20220711100601131600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:858415213592:targetgroup/nginx-alb-tg/1ecfb31475815a1a",
            "target_id": "i-0b69b89332d61e1a3"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:858415213592:targetgroup/nginx-alb-tg/1ecfb31475815a1a-20220711100602052400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:858415213592:targetgroup/nginx-alb-tg/1ecfb31475815a1a",
            "target_id": "i-0fde80b69b091b451"
          },
          "dependencies": [
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858415213592:route-table/rtb-0643c2cc26ad1af79",
            "id": "rtb-0643c2cc26ad1af79",
            "owner_id": "858415213592",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5e47961280dacef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e1342493974d14e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07167df91ae7f2cde",
            "route_table_id": "rtb-0643c2cc26ad1af79",
            "subnet_id": "subnet-0d64d8b2425e735d0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024d07da6daaba976",
            "route_table_id": "rtb-0643c2cc26ad1af79",
            "subnet_id": "subnet-052929b889f05ab32"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858415213592:security-group/sg-0e32d00efbdb2ea32",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e32d00efbdb2ea32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "858415213592",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e1342493974d14e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858415213592:security-group/sg-02bf053ea31cf47fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bf053ea31cf47fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "858415213592",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e1342493974d14e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858415213592:subnet/subnet-0d64d8b2425e735d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d64d8b2425e735d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "858415213592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "vpc_id": "vpc-07e1342493974d14e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858415213592:subnet/subnet-052929b889f05ab32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052929b889f05ab32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "858415213592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "vpc_id": "vpc-07e1342493974d14e"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858415213592:vpc/vpc-07e1342493974d14e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b2e6656e36b5b14",
            "default_route_table_id": "rtb-028067bb6b991be21",
            "default_security_group_id": "sg-0caa4c5e2210241e2",
            "dhcp_options_id": "dopt-0030b4d6e9136de86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07e1342493974d14e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028067bb6b991be21",
            "owner_id": "858415213592",
            "tags": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            },
            "tags_all": {
              "billing_code": "11",
              "company": "Globomantics",
              "project": "Globomantics-11"
            }
          }
        }
      ]
    }
  ]
}